# StructDraw

./: .gitignore  LICENSE  README.md  demo_run.py  pyproject.toml  setup.py
StructDraw/: __init__.py  dssp.py  file_reader.py  struct_draw.py
docs/: anatomy_of_the_plot.md  user_guide.md
predicted_demo/: 1mbn_predicted.cif  predicted_demo.py
src/struct_draw/algorithms/: __init__.py  base_algorithm.py  dssp.py  interface.py  stride.py
src/struct_draw/algorithms/algorithms/: base_algorithm.py  dssp.py
src/struct_draw/apps/: __init__.py  interface.py
src/struct_draw/apps/algorithms/: __init__.py  base_algorithm.py  dssp.py  stride.py
src/struct_draw/dssp/: dssp.py
src/struct_draw/io/: file_reader.py
src/struct_draw/plotter/: canvas.py  chain.py
src/struct_draw/plotter/canvas_components/: draw_area.py  title.py
src/struct_draw/plotter/chain_components/: __init__.py  chain_annotation_area.py  chain_base_area.py  shapes_area.py
src/struct_draw/plotter/small_units/: __init__.py  label.py  shape.py
src/struct_draw/structures/: __init__.py  alignment.py  pdb_model.py
src/struct_draw/visualization/: __init__.py  canvas.py  canvas_components.py  chain.py  shapes.py  text_display.py  visualisation.py
tests/: 1ad0.cif  conftest.py
tests/alignments/: light.afa  light.fasta
tests/unit/: conftest.py
tests/unit/algorithms/: test_dssp.py  test_shared.py  test_stride.py
tests/unit/structures/: test_pdb_model.py
usage_example/: alignment_usage.py  usage.py
usage_example/alignment_data/: light.afa
usage_example/data/: 1ad0_predicted.cif
(+17 files in other folders)
